Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumberInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
