Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(Integer var)
    end
end
